# hs-emoji

./: .gitmodules  README.md  download.sh  emoji.cabal
examples/: Main.hs
src/Data/: Emoji.hs
src/Data/Emoji/: Internal.hs
