name:                emoji
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-emoji#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Emoji
                       Data.Emoji.Internal
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , unordered-containers
                     , template-haskell == 2.12.0.0
  default-language:    Haskell2010

executable emoji-example
  hs-source-dirs:      examples
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , emoji
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-emoji
